Add subscriber test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+#spring.rabbitmq.host=hedgehog.rmq.cloudamqp.com
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=dqgoltix
+#spring.rabbitmq.password=5-E5X5JFEqzCBWEzHnERisoW6KHMn-_g
 
+spring.rabbitmq.addresses=amqp://dqgoltix:5-E5X5JFEqzCBWEzHnERisoW6KHMn-_g@hedgehog.rmq.cloudamqp.com/dqgoltix
